Bug 137621 - EDITING Autofill of merged cells with Boolean content incorrect, series detection does not work
Summary: EDITING Autofill of merged cells with Boolean content incorrect, series detec...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Attila Szűcs
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: AutoFill
  Show dependency treegraph
 
Reported: 2020-10-20 12:39 UTC by NISZ LibreOffice Team
Modified: 2020-11-18 09:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Calc (12.93 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-10-20 12:39 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Calc (33.91 KB, image/png)
2020-10-20 12:39 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-20 12:39:38 UTC
Created attachment 166542 [details]
Example file from Calc

When autofilling adjacent merged cells containing Boolean True/False values in Calc, the results are incorrect compared to non-merged cell results.

Steps to reproduce:
    1. Open attached file
    2. In A2:B2 we have Boolean TRUE/FALSE values and in A3:B3 FALSE/TRUE
    3. In A5:D5 we have TRUE/FALSE in merged cells, and in A6:D6 FALSE/TRUE
    4. In C2:F2 the A2:B2 range was autofilled, and in C3:F3 the A3:F3 range. Here the TRU/FALSE values are alternating correctly.
    5. In E5:L5 the A5:D5 range was autofilled and in E6:L6 the A6:D6 range. Here the cell merging works correctly, but instead of the alternating TRU/FALSE values all contents are TRUE

Actual results:
As above.

Expected results:
Series detection should work in merged cells, giving the same results as with non-merged cells. Cell range E8:L9 illustrates this.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 586f6abee92af3cdabdce034b607b9a046ed3946
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-10-20 12:39:57 UTC
Created attachment 166543 [details]
Screenshot of the problem in Calc
Comment 2 Commit Notification 2020-10-26 15:17:00 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/66c316cd4a703b4bc2e569b14888ea9e0d2ca9c9

tdf#137621 sc: autofill bool sequences in merged cells

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-11-18 09:30:33 UTC
Verified in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: 72056f39e01e36afac36c62988331b6813c8214f
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!