tdf#137621 sc: autofill bool sequences in merged cells

Fixed FillAnalyse to not discover booleans as number sequences,
rather as a pattern that can be repeated.

Co-authored-by: Tibor Nagy (NISZ)
Change-Id: I0a32e756461eb4101b77724129b745e23a658b1d